[package]
name = "testing-physics-based-movement"
version = "0.1.0"
publish = false
authors = ["Idan Arye <idanarye@gmail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
]

dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.6", default-features = false }
bevy_rapier2d = { version = "0.12.1", features = ["render"] }
float-ord = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.25", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"
